--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/kdmeubichinho?useTimezone=true&serverTimezone=UTC
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+security.jwt.expiracao=30
+security.jwt.chave-assinatura=RWR1YXJkb0phY2tlbGluZUx1Y2lhbmFNYXRldXNSYWZhZWw=
