--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
 		  <artifactId>springfox-swagger-ui</artifactId>
 		  <version>2.9.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+    		<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
