Upload de arquivo para AWS

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+		   <groupId>com.amazonaws</groupId>
+		   <artifactId>aws-java-sdk</artifactId>
+		   <version>1.11.163</version>
+		</dependency>
 	</dependencies>
 
 	<build>
