--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 security.jwt.expiracao=30
 security.jwt.chave-assinatura=RWR1YXJkb0phY2tlbGluZUx1Y2lhbmFNYXRldXNSYWZhZWw=
+
+aws.s3.endpointUrl: https://s3.sa-east-1.amazonaws.com
+aws.s3.accessKey: AKIARE3XB7GCU5MEBCGD
+aws.s3.secretKey: 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
+aws.s3.bucketName: java-test-app-mvt-dh
+
+spring.servlet.multipart.max-file-size: 5MB
