--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 		   <artifactId>aws-java-sdk</artifactId>
 		   <version>1.11.163</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
