--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 security.jwt.expiracao=30
-security.jwt.chave-assinatura=RWR1YXJkb0phY2tlbGluZUx1Y2lhbmFNYXRldXNSYWZhZWw=
+security.jwt.chave-assinatura=${JWT_SECRET_KEY}
