--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-security.jwt.expiracao=30
+security.jwt.expiracao=${JWT_EXPIRATION_KEY}
 security.jwt.chave-assinatura=${JWT_SECRET_KEY}
